<resources>
    <string name="tab_main">电箱</string>
    <string name="tab_message">智能</string>
    <string name="tab_mine">我的</string>
    <string name="fun_peizhi">配置</string>
    <string name="fun_changjing">场景</string>
    <string name="fun_kongzhi">控制</string>
    <string name="fun_quxian">曲线</string>
    <string name="fun_baobiao">周月报表</string>
    <string name="fun_dingshi">定时</string>
    <string name="fun_wifi_set">WIFI设置</string>
    <string name="fun_wifi_list">WIFI列表</string>
    <string name="device">设备</string>
    <string name="add_device">添加智能电箱</string>
    <string name="please_wait">请等待</string>
    <string name="scan_add">扫码添加</string>
    <string name="scan_results">扫描结果</string>
    <string name="scan_rusults_hint1">请扫描获取线路编号</string>
    <string name="scan_rusults_hint2">请扫描获取电箱安装码</string>
    <string name="switch_code_empty">设备编码为空</string>
    <string name="device_code_empty">设备安装码为空</string>
    <string name="input_correct_switch_code">请输入正确的%1$s位编码</string>
    <string name="input_correct_device_code">请输入正确的%1$s位安装码</string>
    <string name="finish">完成</string>
    <string name="control">控制</string>
    <string name="cur_dianliang">电量: %1$s%2$.1f%3$s 度</string>
    <string name="cur_gonglv">功率: %1$s%2$.1f%3$s 瓦</string>
    <string name="normal">正常</string>
    <string name="line_detail">线路详情</string>
    <string name="line_modify">线路修改</string>
    <string name="line_sets_name">设置图片/名称</string>
    <string name="line_sets_liuliang">设置线路最大电流</string>
    <string name="line_use_default_pic">使用预设名称和图片</string>
    <string name="line_custom_name">自定义线路名称</string>
    <string name="line_custom_pic">自定义线路图片</string>
    <string name="line_name">线路名称</string>
    <string name="line_n">线路</string>
    <string name="line_input_name">请输入线路名称</string>
    <string name="line_sets_v">过欠压设置</string>
    <string name="line_set_under">欠压阀值(V)</string>
    <string name="line_set_over">过压阀值(V)</string>
    <string name="line_set_electricity">过流阀值(A)</string>
    <string name="line_set_leakage_current">漏电流阀值</string>
    <string name="under_vol_value">欠压值</string>
    <string name="set_vol_maxvalue">设置最大欠压值</string>
    <string name="over_vol_value">过压值</string>
    <string name="line_set_electricity1">电量上限(KWH)</string>
    <string name="line_set_electricity2">电量下限(KWH)</string>
    <string name="save">保存</string>
    <string name="connect">连接</string>
    <string name="set_sucess">设置成功</string>
    <string name="statistical_1">电压</string>
    <string name="statistical_2">电流</string>
    <string name="statistical_3">有功电量</string>
    <string name="statistical_4">无功电量</string>
    <string name="statistical_5">当前月有功电量</string>
    <string name="statistical_6">当前月无功电量</string>
    <string name="statistical_7">有功功率</string>
    <string name="statistical_8">无功功率</string>
    <string name="statistical_9">功率因素</string>
    <string name="line_zhaoming">照明</string>
    <string name="line_keting">客厅</string>
    <string name="line_zhuwo">主卧</string>
    <string name="line_woshi">卧室</string>
    <string name="line_shufang">书房</string>
    <string name="line_diannao">电脑</string>
    <string name="line_chufang">厨房</string>
    <string name="line_weishengjian">卫生间</string>
    <string name="line_kongtiao">空调</string>
    <string name="line_chazuo">插座</string>
    <string name="line_reshuiqi">热水器</string>
    <string name="line_other">其它</string>
    <string name="modify_tip">修改提醒</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="modify_pic">确定修改为此图片吗?</string>
    <string name="input_custom_name">请输入自定义名称</string>
    <string name="select_custom_pic">请选择自定义图片</string>
    <string name="ple_set_line_name">请设置线路名称和图片</string>
    <string name="duplicated_line_name">线路名称不能重复</string>
    <string name="timed_task">定时开关</string>
    <string name="timed_task_enable">定时任务被使能</string>
    <string name="timed_task_unenable">定时任务被禁止</string>
    <string name="operator_sucess">操作成功</string>
    <string name="operator_failure">操作失败</string>
    <string name="time">时间</string>
    <string name="repeat">重复</string>
    <string name="repeat_not">不重复</string>
    <string name="switch_on">开</string>
    <string name="switch_off">关</string>
    <string-array name="week_day">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
        <item>-</item>
    </string-array>
    <string-array name="short_week_day">
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
        <item>日</item>
        <item>-</item>
    </string-array>
    <string name="week">周</string>
    <string name="repeat_tip">重复|每周</string>
    <string name="scan_code">扫描二维码</string>
    <string name="scan_sucess">扫描成功</string>
    <string name="scan_failure">扫描失败</string>
    <string name="cur">当前：</string>
    <string name="custom_electric">自定义最大电流量：</string>
    <string name="custom_electric_per">请输入最大电流值</string>
    <string name="maxelectric">0A</string>
    <string name="more">更多</string>
    <string name="config_sucess">配置成功</string>
    <string name="config_failure">配置失败</string>
    <string name="choses_device">智能设备121</string>
    <string name="choses_room">客厅</string>
    <string name="sce_tuijian">推荐图标</string>
    <string name="sce_alltuijian">全部图标</string>
    <string name="sce_wancheng">完成</string>
    <string name="sce_name">场景名称:</string>
    <string name="sce_miaoshu">请输入场景名称</string>
    <string name="sce_icon">请选择场景图标:</string>
    <string name="sce_xianlu">该场景下管理的线路</string>
    <string name="sce_addxianlu">添加线路</string>
    <string name="sceneBean">场景</string>
    <string name="new_scene">创建新场景</string>
    <string name="choice_sceneimg">选择场景图片</string>
    <string name="edit_scene">编辑场景</string>
    <string name="sce_choceall">全选</string>
    <string name="sce_cancel">取消</string>
    <string name="choce_device">选择设备</string>
    <string name="sce_getbed">起床</string>
    <string name="sce_shuijiao">睡觉</string>
    <string name="sce_huijia">回家</string>
    <string name="sce_lijia">离家</string>
    <string name="sce_zhixingsucess">执行成功</string>
    <string name="sce_issure">确定需要删除此场景吗？</string>
    <string name="xianlu_issure">确定需要删除此线路吗？</string>
    <string name="deletescen">删除场景</string>
    <string name="deletescene_succe">删除场景成功</string>
    <string name="deletescene_fail">删除场景失败</string>
    <string name="deletexianlu">删除线路</string>
    <string name="deletexianlu_succe">删除线路成功</string>
    <string name="deletexianlu_fail">删除线路失败</string>
    <string name="zhixing_sucess">执行成功</string>
    <string name="zhixing_fail">执行失败</string>
    <string name="setelectricity">设置线路的最大承受电流，保护线路用电安全</string>
    <string name="associated_lines">关联%1$s条线路</string>
    <string name="exceu_sce">执行场景</string>
    <string name="execute">执行</string>
    <string name="exceu_sce_issure">确定需要执行%1$s场景吗？</string>
    <string name="login_regist">立即注册</string>
    <string name="register_fail">注册失败</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_visitor_mode">游客模式</string>
    <string name="login">登录</string>
    <string name="login_fail">登录失败</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="name_password_cannot_empty">用户名或密码不能为空</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="ensure_password">确认密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="password_not_same">前后密码不一致</string>
    <string name="login_hint_username">请输入用户名或手机号码</string>
    <string name="reg_hint_username">请输入用户名</string>
    <string name="reg_hint_input_phone">请输入手机号码</string>
    <string name="input_correct_phone">请输入正确的手机号码</string>
    <string name="reg_hint_input_verify">请输入短信验证码</string>
    <string name="reg_verify_code">验证码</string>
    <string name="reg_get_verify_code">获取验证码</string>
    <string name="curve_by_month">按月</string>
    <string name="curve_by_day">按日</string>
    <string name="statement_circuit_name">线路名</string>
    <string name="statement_electric_quantity">用电量（度）</string>
    <string name="statement_electric_charge">电费（元）</string>
    <string name="statement_quantity_all">共计用电：%1$s%2$.1f%3$s 度</string>
    <string name="statement_unit_electric">度</string>
    <string name="statement_charge_all">电费：%1$s%2$.1f%3$s 元</string>
    <string name="statement_unit_charge">元</string>
    <string name="timing_title">定时任务</string>
    <string name="loading">正在加载</string>
    <string name="curve_close">关闭</string>
    <string name="popup_collector">点击切换设备</string>
    <string name="settings_title">设置</string>
    <string name="settings_change_password">修改密码</string>
    <string name="settings_suggestion">意见反馈</string>
    <string name="settings_clean">清除缓存</string>
    <string name="settings_language">语言切换</string>
    <string name="settings_version">当前版本号</string>
    <string name="settings_exit">退出登录</string>
    <string name="deletewarn">删除提醒</string>
    <string name="electricity_unit">A</string>
    <string name="server_error_message_no_result">无结果</string>
    <string name="date_unit_year">年</string>
    <string name="date_unit_month">月</string>
    <string name="date_unit_day">日</string>
    <string name="local_error_message_no_data">暂无数据</string>
    <string name="get_data_fail">获取数据失败</string>
    <string name="mine_subtitle_about">关于</string>
    <string name="mine_subtitle_question">常见问题</string>
    <string name="mine_subtitle_bind">第三方绑定</string>
    <string name="mine_subtitle_push">推送设置</string>
    <string name="mine_binding_wx">绑定微信</string>
    <string name="mine_binding_qq">绑定QQ</string>
    <string name="mine_binding_phone">绑定手机</string>
    <string name="mine_push">推送内容</string>
    <string name="mine_unbound">未绑定</string>
    <string name="mine_isbound">已绑定</string>
    <string name="mine_subtitle_user_info">用户信息</string>
    <string name="frequency">频率</string>
    <string name="personalcenter">个人中心</string>
    <string name="nick_name">昵称</string>
    <string name="phone_num">手机号码</string>
    <string name="set">设置</string>
    <string name="daily_date_format">MM月dd日</string>
    <string name="monthly_date_format">yyyy年MM月</string>
    <string name="sets_devicename">电箱名称</string>
    <string name="sets_botelv">波特率</string>
    <string name="sets_caijipl">采集频率</string>
    <string name="sets_gaojingfazhi">告警阀值</string>
    <string name="sets_guzhangma">故障码频率</string>
    <string name="sets_xintiaopinglv">心跳间隔</string>
    <string name="sets_miaoshu">请输入设备名称</string>
    <string name="devicename">设备名称</string>
    <string name="modify_succe">设置成功</string>
    <string name="modify_fail">设置失败</string>
    <string name="op_fail">操作失败,请重试</string>
    <string name="new_version">检测到有新的版本</string>
    <string name="is_upgrade_to_new_version">是否安装新的版本?</string>
    <string name="intall_now">立即安装</string>
    <string name="network_cannot_connect">网络无法访问,请检查网络连接</string>
    <string name="network_time_out">网络连接超时,请重试</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="refresh_sucess">刷新成功</string>
    <string name="terminal_net_error">终端响应超时,请确认是否有网络故障</string>
    <string name="vs4">线路:</string>
    <string name="vs50">首页 / 智能电箱</string>
    <string name="vs54">首页 / 智能电箱 / 专业功能 / 线路维护 / 添加线路</string>
    <string name="vs55">选择图片:</string>
    <string name="vs59">专业功能</string>
    <string name="vs86">电箱设置</string>
    <string name="vs94">登录过期，重新登录</string>
    <string name="vs95">安全设置</string>
    <string name="vs96">请输入</string>
    <string name="vs112">首页 / 智能电箱 / 专业功能 / 电箱设置</string>
    <string name="vs117">线路维护</string>
    <string name="vs125">警告</string>
    <string name="vs131">服务器地址设置</string>
    <string name="vs132">还原</string>
    <string name="vs133">修改</string>
</resources>