<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.rejuvee.smartelectric.family.model.viewmodel.HiddenDialogViewModel" />

        <variable
            name="presenter"
            type="com.rejuvee.smartelectric.family.activity.login.HiddenDialogActivity.Presenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_dialog_tip"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        tools:context="com.rejuvee.smartelectric.family.activity.login.HiddenDialogActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/vs131"
            android:textColor="#000000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_ip"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/white"
                android:hint="@string/vs96"
                android:inputType="phone"
                android:lines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:text="@={vm.ip}"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/green_light"
                android:onClick="@{presenter::onReset}"
                android:text="@string/vs132"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/master"
                android:onClick="@{presenter::onSave}"
                android:text="@string/vs133"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/master_red"
                android:onClick="@{presenter::onCancel}"
                android:text="@string/curve_close"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</layout>